--- a/style.css
+++ b/style.css
@@ -50,10 +50,12 @@ header > h1{
     color: white;
     padding-top: 40px;
     text-shadow: 0 2px rgb(27, 78, 48);
+    font-size: 40px;
     }
 
 header > p{
     padding-top: 10px;
+    margin: 0 auto;
     text-align: center;
     color: white;
     font: normal arial, sans-serif;
@@ -64,14 +66,16 @@ header > p{
 
 nav{
     position: relative;
-    bottom: 70px;
+    bottom: 65px;
     display: inline;
-    margin-right: 20px;
 }
 
 nav li{
     display: inline;
+    position: relative;
+    left: 40px;
     margin-right: 20px;
+    font-size: larger;
 }
 
 nav > ul{
@@ -100,7 +104,7 @@ a.menu:active{
 /* Main */
 main{
     position: relative;
-    bottom: 10px;
+    bottom: 22px;
     background-color: white;
     border-radius: 0 0 15px 15px;
     max-width: 800px;
